--- a/style/boxes.css
+++ b/style/boxes.css
@@ -124,3 +124,34 @@ select {
     margin-bottom: 2px;
     margin-right: 18px;
 }
+
+.closingLayer {
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Sit on top */
+    padding-top: 100px;
+    /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
+    z-index: 29;
+    /* Black w/ opacity */
+}
+
+.movingBar {
+    background-color: #e7e5e5;
+    height: 15px;
+    width: 100%;
+    margin-top: -3px;
+    cursor: all-scroll;
+}
