--- a/style/boxes.css
+++ b/style/boxes.css
@@ -56,6 +56,21 @@
     z-index: 30;
 }
 
+.configurationBox {
+    padding-top: 0.25%;
+    padding-bottom: 1%;
+    width: 620px;
+    height: auto;
+    text-align: center;
+    color: #525252;
+    background-color: #e7e5e5;
+    font-family: Arial, Helvetica, sans-serif;
+    left: 32.5%;
+    top: 5%;
+    position: absolute;
+    z-index: 30;
+}
+
 .cancelButton {
     width: 75px;
     height: 35px;
