3 dots removed and context menu added like in links

--- a/style/style.css
+++ b/style/style.css
@@ -344,6 +344,7 @@ hr.solid {
 }
 
 .componentName {
+    position: relative;
     font-size: var(--componentTextSize);
     font-family: var(--componentTextFamily);
 }
