--- a/style/style.css
+++ b/style/style.css
@@ -347,6 +347,7 @@ hr.solid {
     position: relative;
     font-size: var(--componentTextSize);
     font-family: var(--componentTextFamily);
+    white-space: nowrap;
 }
 
 .focusName {
