--- a/style/boxes.css
+++ b/style/boxes.css
@@ -59,7 +59,7 @@
 .configurationBox {
     padding-top: 0.25%;
     padding-bottom: 1%;
-    width: 620px;
+    width: 720px;
     height: auto;
     text-align: center;
     color: #525252;
@@ -169,4 +169,47 @@ select {
     width: 100%;
     margin-top: -3px;
     cursor: all-scroll;
+}
+
+.styleButton {
+    width: 75px;
+    height: 25px;
+    display: inline;
+    background-color: #f1f1f1;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 2.5px;
+    padding-bottom: 2.5px;
+    margin-top: 2px;
+    margin-left: 5px;
+}
+
+.styleButtonPressed {
+    width: 75px;
+    height: 25px;
+    display: inline;
+
+    background-color: #ccc;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 2.5px;
+    padding-bottom: 2.5px;
+}
+
+.styleButtonsContainer {
+    width: auto;
+    height: auto;
+    display: inline-block;
+    margin-top: 30px;
+    margin-right: 15px;
+}
+
+.formContainer {
+    width: 665px;
+    height: auto;
+    margin-top: 20px;
+
+    margin-bottom: 10px;
+    display: inline-block;
+
 }
