--- a/style/boxes.css
+++ b/style/boxes.css
@@ -175,6 +175,8 @@ select {
     width: 100px;
     height: 50px;
     display: inline;
+    font-size: large;
+    
     background-color: #f1f1f1;
     padding-left: 5px;
     padding-right: 5px;
@@ -188,20 +190,23 @@ select {
     width: 100px;
     height: 50px;
     display: inline;
-
+    font-size: large;
     background-color: #ccc;
     padding-left: 5px;
     padding-right: 5px;
     padding-top: 2.5px;
     padding-bottom: 2.5px;
+    margin-top: 2px;
+    margin-left: 5px;
 }
 
 .styleButtonsContainer {
     width: auto;
     height: auto;
+    
     display: inline-block;
     margin-top: 30px;
-    margin-right: 15px;
+    margin-right: 14px;
 }
 
 .formContainer {
