--- a/style/style.css
+++ b/style/style.css
@@ -11,17 +11,18 @@
     --componentBackgroundColor: #FFFFFF;
     --componentBorderColor: #000000;
     --componentBorderWidth: 2px;
-    --componentSelectedBorderColor:blue;
-    --componentTextBorderWidth:0px;
-    --componentInnerMarginX:4px;
-    --componentInnerMarginY:4px;
+    --componentSelectedBorderColor: blue;
+    --componentTextBorderWidth: 0px;
+    --componentInnerMarginX: 4px;
+    --componentInnerMarginY: 4px;
 
     --operationTextSize: 12pt;
     --operationTextFamily: Arial, Helvetica, sans-serif;
     --operationFontWeight: "normal";
     --operationFontStyle: "normal";
     --operationTextDecoration: "none";
-    --operationTextBackgroundColor: transparent;;
+    --operationTextBackgroundColor: transparent;
+    ;
     --operationTextColor: #000000;
 
     --linkTextSize: 12pt;
@@ -119,8 +120,8 @@
 }
 
 .component {
-    width: 165px;
-    height: auto;
+    width: fit-content;
+    height: fit-content;
     text-align: center;
     position: absolute;
     cursor: grab;
@@ -134,14 +135,29 @@
     /* outline: 2px black; */
     /* outline-color: white; */
     display: flex;
+    align-items: center;
     justify-content: center;
     border: var(--componentBorderWidth) solid var(--componentBorderColor);
     box-sizing: border-box;
     -moz-box-sizing: border-box;
 }
 
+/* 
+.pillowY{
+    width: var(--componentInnerMarginX);
+    height: 20px;
+    margin-top: 7px ;
+    background-color: aquamarine;
+}
+.pillowX{
+    width: 75%;
+    height: 4px;
+    background-color: aquamarine;
+} */
+
+
 .selected {
-    width: 165px;
+    width: fit-content;
     height: auto;
     /* height: 75px; */
     text-align: center;
@@ -152,6 +168,7 @@
     z-index: 9;
     background: var(--componentBackgroundColor);
     display: flex;
+    align-items: center;
     justify-content: center;
     font-size: medium;
     font-family: Arial, Helvetica, sans-serif;
@@ -390,13 +407,11 @@ hr.solid {
 .componentName {
     width: 100%;
     height: fit-content;
-    /* padding: 4px; */
-    padding-left: var(--componentInnerMarginX);
+    /* padding-left: var(--componentInnerMarginX);
     padding-right: var(--componentInnerMarginX);
     padding-top: var(--componentInnerMarginY);
-    padding-bottom: var(--componentInnerMarginY);
+    padding-bottom: var(--componentInnerMarginY); */
     /* can be done with calc */
-    margin-top: 6px;
     position: relative;
     font-size: var(--componentTextSize);
     font-family: var(--componentTextFamily);
