can auto resize

--- a/style/style.css
+++ b/style/style.css
@@ -13,6 +13,7 @@
     --componentBorderWidth: 2px;
     --componentSelectedBorderColor: blue;
     --componentTextBorderWidth: 0px;
+    /* Not functional*/
     --componentInnerMarginX: 4px;
     --componentInnerMarginY: 4px;
 
