--- a/style/style.css
+++ b/style/style.css
@@ -6,7 +6,6 @@
     --componentTextDecoration: "none";
     --componentTextBackgroundColor: transparent;
     --componentTextColor: #000000;
-    --componentDisplay: flex;
     --subcomponentTextSize: 12pt;
     --subcomponentTextColor: #000000;
     --subcomponentBackgroundColor: #FFFFFF;
@@ -138,7 +137,7 @@
     /* background: transparent; */
     /* outline: 2px black; */
     /* outline-color: white; */
-    display: var(--componentDisplay);
+    display: flex;
     align-items: center;
     justify-content: center;
     border: var(--componentBorderWidth) solid var(--componentBorderColor);
@@ -171,7 +170,7 @@
     color: black;
     z-index: 9;
     background: var(--componentBackgroundColor);
-    display: var(--componentDisplay);;
+    display: flex;
     align-items: center;
     justify-content: center;
     font-size: medium;
@@ -380,8 +379,13 @@ hr.solid {
 }
 
 .subComponent {
-    width: auto;
-    text-align: center;
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items:center;
+    align-content: center;
+    justify-content: center;
+
     font-size: var(--subcomponentTextSize);
     color: var(--subcomponentTextColor);
     background-color: var(--subcomponentBackgroundColor);
