--- a/style/boxes.css
+++ b/style/boxes.css
@@ -9,7 +9,7 @@
     left: 32.5%;
     top: 5%;
     position: absolute;
-    z-index: 30;
+    z-index: 48;
 }
 
 .updatingBox {
@@ -23,7 +23,7 @@
     left: 32.5%;
     top: 5%;
     position: absolute;
-    z-index: 30;
+    z-index: 48;
 }
 
 .selectingBox {
@@ -38,7 +38,7 @@
     left: 32.5%;
     top: 5%;
     position: absolute;
-    z-index: 30;
+    z-index: 48;
 }
 
 .inputBox {
@@ -53,7 +53,7 @@
     left: 32.5%;
     top: 5%;
     position: absolute;
-    z-index: 30;
+    z-index: 48;
 }
 
 .configurationBox {
@@ -68,7 +68,7 @@
     left: 32.5%;
     top: 5%;
     position: absolute;
-    z-index: 30;
+    z-index: 48;
 }
 
 .cancelButton {
@@ -89,6 +89,12 @@
     float: right;
     border-radius: 10%;
     margin-right: 25px;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .okButton {
@@ -100,6 +106,12 @@
     float: right;
     border-radius: 10%;
     margin-right: 25px;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .closeBoxButton {
@@ -111,6 +123,12 @@
     float: right;
     margin-right: 5px;
     z-index: 30;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 select {
@@ -158,7 +176,7 @@ select {
     background-color: rgb(0, 0, 0);
     /* Fallback color */
     background-color: rgba(0, 0, 0, 0.4);
-    z-index: 29;
+    z-index: 47;
     /* Black w/ opacity */
 }
 
@@ -176,7 +194,6 @@ select {
     height: 50px;
     display: inline;
     font-size: large;
-    
     background-color: #f1f1f1;
     padding-left: 5px;
     padding-right: 5px;
@@ -203,7 +220,6 @@ select {
 .styleButtonsContainer {
     width: auto;
     height: auto;
-    
     display: inline-block;
     margin-top: 30px;
     margin-right: 14px;
@@ -215,5 +231,4 @@ select {
     margin-top: 20px;
     margin-bottom: 10px;
     display: inline-block;
-
 }
