--- a/style/style.css
+++ b/style/style.css
@@ -218,6 +218,15 @@
     white-space: nowrap;
 }
 
+.unselectableText {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
