--- a/style/style.css
+++ b/style/style.css
@@ -300,7 +300,8 @@ body {
 }
 
 .function {
-    height: 29px;
+    height: fit-content;
+    width: fit-content;
     cursor: grab;
     text-align: right;
     line-height: 170%;
@@ -313,6 +314,7 @@ body {
 }
 
 .fName {
+    height: 26px;
     font-size: var(--operationTextSize);
     font-family: var(--operationTextFamily);
     font-weight: var(--operationFontWeight);
@@ -321,9 +323,9 @@ body {
     color: var(--operationTextColor);
     background-color: var(--operationTextBackgroundColor);
     text-align: left;
-    margin-top: -0.5px;
     margin-left: 40px;
     white-space: nowrap;
+    overflow: hidden;
 }
 
 .ficon {
@@ -342,7 +344,9 @@ body {
 }
 
 .selectedFunction {
-    height: 29px;
+    height: fit-content;
+    width: fit-content;
+    /*29px to height*/
     padding-right: 14px;
     text-align: center;
     cursor: grab;
