--- a/style/boxes.css
+++ b/style/boxes.css
@@ -190,9 +190,9 @@ select {
 }
 
 .styleButton {
-    width: 100px;
-    height: 50px;
-    display: inline;
+    width: 25px;
+    height: 25px;
+    display: inline-block;
     font-size: large;
     background-color: #f1f1f1;
     padding-left: 5px;
@@ -208,9 +208,9 @@ select {
 }
 
 .styleButtonPressed {
-    width: 100px;
-    height: 50px;
-    display: inline;
+    width: 25px;
+    height: 25px;
+    display: inline-block;
     font-size: large;
     background-color: #ccc;
     padding-left: 5px;
@@ -229,14 +229,14 @@ select {
     width: auto;
     height: auto;
     display: inline-block;
-    margin-top: 30px;
+    margin-top: 22px;
     margin-right: 14px;
 }
 
 .formContainer {
-    width: 98%;
+    width: 97%;
     height: auto;
     margin-top: 20px;
-    margin-bottom: -8px;
+    margin-bottom: 5px;
     display: inline-block;
 }
