--- a/style/boxes.css
+++ b/style/boxes.css
@@ -71,6 +71,20 @@
     z-index: 48;
 }
 
+.layerInfoBox {
+    padding-bottom: 5px;
+    width: 500px;
+    height: auto;
+    text-align: center;
+    color: #525252;
+    background-color: #e7e5e5;
+    font-family: Arial, Helvetica, sans-serif;
+    left: 32.5%;
+    top: 75%;
+    position: absolute;
+    z-index: 48;
+}
+
 .cancelButton {
     width: 75px;
     height: 35px;
