--- a/style/boxes.css
+++ b/style/boxes.css
@@ -13,9 +13,9 @@
 }
 
 .updatingBox {
-    padding: 1px;
-    width: 400px;
-    height: 80px;
+    padding: 17px;
+    width: fit-content;
+    height: fit-content;
     text-align: center;
     color: #525252;
     background-color: #cedff7;
@@ -80,8 +80,8 @@
     color: #525252;
     background-color: #e7e5e5;
     font-family: Arial, Helvetica, sans-serif;
-    left: 32.5%;
-    top: 65%;
+    left: 10px;
+    top: 60%;
     position: absolute;
     z-index: 48;
 }
