--- a/style/boxes.css
+++ b/style/boxes.css
@@ -80,10 +80,11 @@
     color: #525252;
     background-color: #e7e5e5;
     font-family: Arial, Helvetica, sans-serif;
-    left: 10px;
-    top: 60%;
+    left: 8px;
+    top: 51.3%;
     position: absolute;
     z-index: 48;
+    cursor: grab;
 }
 
 .cancelButton {
@@ -270,6 +271,7 @@ select {
     height: 40px;
     background-image: url(../images/circleHelp.png);
     background-size: contain;
+    cursor: pointer;
 }
 
 .layerInfoHintPressed {
@@ -277,6 +279,7 @@ select {
     height: 40px;
     background-image: url(../images/greenHelp.png);
     background-size: contain;
+    cursor: pointer;
 }
 
 .disabledInfoHint {
