--- a/style/boxes.css
+++ b/style/boxes.css
@@ -119,7 +119,10 @@
     background-color: #1c5299;
     color: #FFFFFF;
     border: 0px;
+    padding-top: 7px;
     float: right;
+    font-weight: bold;
+    font-size: large;
     border-radius: 10%;
     margin-right: 25px;
     -webkit-touch-callout: none;
@@ -128,10 +131,11 @@
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    box-shadow: 4px 6px 3px rgb(0 0 0 / 40%);
 }
 
 .closeBoxButton {
-    background-image: url('../images/closeInfo.png');
+    background-image: url('../images/oldCloseInfo.png');
     width: 24px;
     height: 24px;
     margin-top: 2px;
@@ -165,7 +169,6 @@ select {
 
 .buttonTeam {
     margin-top: 8px;
-    margin-left: 1%;
     height: 45px;
 }
 
@@ -288,4 +291,21 @@ select {
     height: 38px;
     background-image: url(../images/disabledCircleHelp.png);
     background-size: contain;
+}
+
+.cancelConfigButton {
+    width: auto;
+    height: 35px;
+    background-color: #FFFFFF;
+    color: #1c5299;
+    font-weight: bold;
+    font-size: large;
+    border: #969696 solid 1px;
+    float: left;
+    border-radius: 10%;
+    margin-left: 25px;
+    box-shadow: 4px 6px 3px rgb(0 0 0 / 40%);
+    padding-top: 7px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
