--- a/style/style.css
+++ b/style/style.css
@@ -229,7 +229,7 @@
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    font-size: small;
+    /* font-size: small; */
     white-space: nowrap;
 }
 
@@ -312,6 +312,7 @@ body {
     -ms-user-select: none;
     user-select: none;
     overflow: scroll;
+    padding-bottom: 12px;
 }
 
 .function {
@@ -350,8 +351,8 @@ body {
 .ficon {
     float: left;
     margin-right: 14px;
-    margin-top: 1.45px;
-    margin-left: 3px;
+    margin-top: 1.35px;
+    margin-left: 5px;
     width: 24px;
     height: 25px;
     background: no-repeat;
